2004-11-05  Vincent Noel  <vnoel@cox.net>

	* actions.h: New. Move the Action structure here.

	* actions.c: Add copyright.

	* userprefs.h: Move UserPrefsStruct here.

	* logrtns.h: Remove obsolete prototypes.

	* log_repaint.c: Remove global variables.

	* about.c:
	* calendar.c: 
	* misc.h:
	* logview.h:
	* actions.c:
	* misc.c: Don't always include gnome.h. Use relevant includes.

	* logview.c (logview_help): Adapt.

2004-11-04  Vincent Noel  <vnoel@cox.net>

	* logrtns.c (ReadLogStats): Fix the number of lines in info window.

	* logview.c: Add a separator before "Collapse all" in the view menu.

	* misc.c (IsLeapYear): moved to misc.c

	* logview.c: (parse_syslog): Kill. Not used anymore.
	(destroy): If the opened log is zipped, don't save it in gconf.
	Remove the GNOMELOCALEDIR define from logview.c, it's already in Makefile.am
	(ExitProg): Kill, just call gtk_main_quit.

2004-11-04  Vincent Noel  <vnoel@cox.net>

	* logview.c (destroy): Only save the size and opened log when
	destroying the last window.

	* userprefs.c (prefs_create_defaults): open one of standard logs
	when there is no previous selection in gconf.
	(prefs_load): Read previous log and window size in gconf.
	(prefs_save): Store the opened log and window size in gconf.

	* logview.c (CreateMainWin): Use the width/height stored in gconf
	for creating the window.

	* userprefs.c: Renamed the file from userprefsdialog.c

	* logrtns.c: Remove the ifdef'ed functions, which have not been
	compiled or used in 2 years.

	* calendar.c: Remove a bunch of useless defines.

	* logrtns.c (isLogFile): Use the GnomeVFSResult to check the file
	permissions instead of calling an extra gnome_vfs_get_file_info.
	(GetLogSize): remove. Not used anywhere anymore.
	(ParseLine): Fix a bug.
	(ReadLogStats): Fix the parsing of dates in the log.
	(OpenLogFile): When opening a zipped log, don't use an external
	program to unzip it in a tmp directory. Use the gnome-vfs gzip
	method.