@@ -18,7 +18,7 @@
 
     ---------------------------------------------------------------------- */
 
-
+#include <gtk/gtk.h>
 #include <glib/gi18n.h>
 #include "logview.h"
 #include "info.h"
