@@ -19,6 +19,7 @@
 
     ---------------------------------------------------------------------- */
 
+#include <gtk/gtk.h>
 #include <glib/gi18n.h>
 #include "logview.h"
 #include "logrtns.h"
