@@ -1,5 +1,11 @@
 2004-11-05  Vincent Noel  <vnoel@cox.net>
 
+	* config.c: Remove includes.
+
+	* configdata.h: New. Move ConfigData struct here.
+
+	* desc_db.c: Add copyright.	
+
 	* actions.h: New. Move the Action structure here.
 
 	* actions.c: Add copyright.
@@ -10,6 +16,9 @@
 
 	* log_repaint.c: Remove global variables.
 
+	* desc_db.c:
+	* userprefs.c: 
+	* zoom.c: 
 	* about.c:
 	* calendar.c: 
 	* misc.h:
